--- a/src/views/partials/inicio/slider.hbs
+++ b/src/views/partials/inicio/slider.hbs
@@ -4,24 +4,35 @@
         <div class="slider" id="slider">
 
             {{>item-slider
+                visible=false
+                img="/img/Slider/slider-0.jpg"
+                logos="/img/Slider/logos-slider-0.png"
+                texts="/img/Slider/text-slider-0.png"
+            }}
+
+            {{>item-slider
+                visible=true
                 img="/img/Slider/slider-1.jpg"
                 text1="Tu procedimiento quirúrgico"
                 text2="Precios accesibles, calidad médica."
             }}
 
             {{>item-slider
+                visible=true
                 img='/img/Slider/slider-2.jpg'
                 text1="Cirugía contra la obesidad y diabetes"
                 text2="Cirugía bariátrica y metabólica."
             }}
 
             {{>item-slider
+                visible=true
                 img='/img/Slider/slider-3.jpg'
                 text1="Diagnóstico y tratamiento ginecológico"
                 text2="Atención por citas y emergencias."
             }}
 
             {{>item-slider
+                visible=true
                 img='/img/Slider/slider-4.jpg'
                 text1="Conoce nuestros Planes Prenatales"
                 text2="Planifiquemos la llegada de tu bebé."
