Cambio en Slider

--- a/src/views/partials/inicio/slider.hbs
+++ b/src/views/partials/inicio/slider.hbs
@@ -5,6 +5,15 @@
 
             {{>item-slider
                 visible=false
+                clase="contenido-opt-1"
+                img="/img/Slider/slider-5.jpg"
+                logos="/img/Slider/30-Aniversario.png"
+                texts="/img/Slider/text-slider-aniversario.png"
+            }}
+
+            {{>item-slider
+                visible=false
+                clase="contenido-opt-2"
                 img="/img/Slider/slider-0.jpg"
                 logos="/img/Slider/logos-slider-0.png"
                 texts="/img/Slider/text-slider-0.png"
