--- a/src/views/partials/item-slider.hbs
+++ b/src/views/partials/item-slider.hbs
@@ -6,7 +6,7 @@
             <p class="slider__element _shadow-bg-light-l animated fadeInUp hidden">{{text2}}</p>
         </div>
     {{else}}
-        <div class="contenido">
+        <div class="{{clase}}">
             <div class="slider__element left animated fadeIn hidden">
                 <img src="{{logos}}" alt="logos">
             </div>
