--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -480,7 +480,7 @@ p {
 
 #slider-section .slider {
     display: flex;
-    width: 500%;
+    width: 600%;
     margin-left: -100%;
 }
 
@@ -565,7 +565,8 @@ p {
     animation-delay: 1.2s;
 }
 
-#slider-section .contenido {
+#slider-section .contenido-opt-1,
+#slider-section .contenido-opt-2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -578,38 +579,49 @@ p {
     padding-right: 35px;
 }
 
-#slider-section .contenido .left,
-#slider-section .contenido .right {
+#slider-section .contenido-opt-1 .left,
+#slider-section .contenido-opt-1 .right,
+#slider-section .contenido-opt-2 .left,
+#slider-section .contenido-opt-2 .right {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 2px solid red; */
     height: 70%;
 }
 
-#slider-section .contenido .left {
+#slider-section .contenido-opt-1 .left,
+#slider-section .contenido-opt-2 .left {
     width: 60%;
     animation-delay: 0.8s;
 }
 
-#slider-section .contenido .left img {
+#slider-section .contenido-opt-1 .left img {
+    width: 65%;
+    max-width: 600px;
+    /* transform: translateY(-20px); */
+}
+
+#slider-section .contenido-opt-2 .left img {
     width: 95%;
     max-width: 900px;
 }
 
-#slider-section .contenido .right {
+#slider-section .contenido-opt-1 .right,
+#slider-section .contenido-opt-2 .right {
     width: 40%;
     animation-delay: 1.2s;
     padding-right: 40px;
 }
 
-#slider-section .contenido .right img {
+#slider-section .contenido-opt-1 .right img,
+#slider-section .contenido-opt-2 .right img {
     width: 95%;
     max-width: 700px;
 }
 
 #slider-section .hidden,
-#slider-section .contenido .hidden {
+#slider-section .contenido-opt-1 .hidden,
+#slider-section .contenido-opt-2 .hidden {
     display: none;
 }
 
@@ -644,31 +656,53 @@ p {
         right: 0;
     }
 
-    #slider-section .contenido {
+    #slider-section .contenido-opt-1,
+    #slider-section .contenido-opt-2 {
         padding-left: 10px;
         padding-right: 10px;
     }
 }
 
+@media (min-width: 501px) {
+    #slider-section .contenido-opt-1 .left img {
+        transform: translateY(-20px);
+    }
+}
+
 @media (max-width: 500px) {
 
-    #slider-section .contenido {
+    #slider-section .contenido-opt-1,
+    #slider-section .contenido-opt-2 {
         display: inline;
         padding: 0;
     }
 
-    #slider-section .contenido .left,
-    #slider-section .contenido .right {
+    #slider-section .contenido-opt-1 .left {
+        width: 100%;
+        height: 57%;
+    }
+
+    #slider-section .contenido-opt-1 .right {
+        width: 100%;
+        height: 23%;
+    }
+
+
+    #slider-section .contenido-opt-2 .left,
+    #slider-section .contenido-opt-2 .right {
         width: 100%;
         height: 40%;
     }
 
-    #slider-section .contenido .right {
+    #slider-section .contenido-opt-1 .right,
+    #slider-section .contenido-opt-2 .right {
         padding: 0;
     }
 
-    #slider-section .contenido .left img,
-    #slider-section .contenido .right img {
+    #slider-section .contenido-opt-1 .left img,
+    #slider-section .contenido-opt-1 .right img,
+    #slider-section .contenido-opt-2 .left img,
+    #slider-section .contenido-opt-2 .right img {
         height: 100%;
         object-fit: contain;
     }
