Se agrego Feed de Instagram

--- a/src/views/partials/inicio/slider.hbs
+++ b/src/views/partials/inicio/slider.hbs
@@ -21,6 +21,7 @@
 
             {{>item-slider
                 visible=true
+                clase="contenido-opt-3"
                 img="/img/Slider/slider-1.jpg"
                 text1="Tu procedimiento quirúrgico"
                 text2="Precios accesibles, calidad médica."
@@ -28,6 +29,7 @@
 
             {{>item-slider
                 visible=true
+                clase="contenido-opt-3"
                 img='/img/Slider/slider-2.jpg'
                 text1="Cirugía contra la obesidad y diabetes"
                 text2="Cirugía bariátrica y metabólica."
@@ -35,6 +37,7 @@
 
             {{>item-slider
                 visible=true
+                clase="contenido-opt-3"
                 img='/img/Slider/slider-3.jpg'
                 text1="Diagnóstico y tratamiento ginecológico"
                 text2="Atención por citas y emergencias."
@@ -42,6 +45,7 @@
 
             {{>item-slider
                 visible=true
+                clase="contenido-opt-3"
                 img='/img/Slider/slider-4.jpg'
                 text1="Conoce nuestros Planes Prenatales"
                 text2="Planifiquemos la llegada de tu bebé."
