--- a/src/views/partials/item-slider.hbs
+++ b/src/views/partials/item-slider.hbs
@@ -1,7 +1,7 @@
 <div class="slider__section" style="background-image:url('{{img}}');">
     <img src="{{img}}" alt="" class="slider__img">
     {{#if visible}}
-        <div class="op-1 slider__caption">
+        <div class="{{clase}} slider__caption">
             <h2 class="slider__element _shadow-bg-light-l animated fadeInDown hidden">{{text1}}</h2>
             <p class="slider__element _shadow-bg-light-l animated fadeInUp hidden">{{text2}}</p>
         </div>
