--- a/src/views/partials/top-bar.hbs
+++ b/src/views/partials/top-bar.hbs
@@ -2,7 +2,7 @@
             <div class="contenedor">
                 <div class="banner d-flex">
                     <div class="logo">
-                        <img class="logo-img" src="/img/Farela-logo.jpeg" alt="logo">
+                        <img class="logo-img" src="/img/logo/Farela-logo.jpeg" alt="logo">
                     </div>
                     <div class="left d-flex flex-column pt-2">
                         <div class="info d-flex justify-content-center mb-auto">
