--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {{!-- <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"> --}}
 
+        <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/animate.css">
