--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -3,13 +3,15 @@
             <div class="container">
                 <!-- <a use:link class="navbar-brand" href="/"><h3>Hospital Farela</h3></a> -->
                 <a class="navbar-brand" href="/">
+
                     <div class="logo">
-                        <div class="text1">
+                        <img class="logo-img" src="/img/logo/Farela-logo-horizontal.png" alt="logo">
+                        {{!-- <div class="text1">
                             <p class="display-6">Hospital</p>
                         </div>
                         <div class="text2">
                             <h2 class="display-5">Farela</h2>
-                        </div>
+                        </div> --}}
                     </div>
                 </a>
                 <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
